// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mode picker component renders mode picker 1`] = `
<body>
  <div>
    <div
      class="euiPopover euiPopover--anchorDownCenter eui-textTruncate"
    >
      <div
        class="euiPopover__anchor eui-textTruncate"
      >
        <button
          class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiButtonEmpty--flushLeft dscIndexPattern__triggerButton"
          data-test-subj="indexPattern-switch-link"
          title="jaeger"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
              focusable="false"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
              />
            </svg>
            <span
              class="euiButtonEmpty__text"
            >
              Jaeger
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Mode picker component renders mode picker 2`] = `
<body>
  <div>
    <div
      class="euiPopover euiPopover--anchorDownCenter eui-textTruncate"
    >
      <div
        class="euiPopover__anchor eui-textTruncate"
      >
        <button
          class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiButtonEmpty--flushLeft dscIndexPattern__triggerButton"
          data-test-subj="indexPattern-switch-link"
          title="jaeger"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
              focusable="false"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
              />
            </svg>
            <span
              class="euiButtonEmpty__text"
            >
              Jaeger
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-describedby="random_html_id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--paddingSmall euiPanel--borderRadiusMedium euiPanel--plain euiPanel--noShadow euiPopover__panel euiPopover__panel--bottom"
        data-autofocus="true"
        role="dialog"
        style="top: 16px; left: -22px; will-change: transform, opacity; z-index: 2000;"
        tabindex="0"
      >
        <div
          class="euiPopover__panelArrow euiPopover__panelArrow--bottom"
          style="left: 10px; top: 0px;"
        />
        <p
          class="euiScreenReaderOnly"
          id="random_html_id"
        >
          You are in a dialog. To close this dialog, hit escape.
        </p>
        <div>
          <div
            class="popOverContainer"
          >
            <div
              class="euiPopoverTitle"
            >
              Choose data schema
            </div>
            <div
              class="euiSelectable"
              data-test-subj="indexPattern-switcher"
            >
              <div
                class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
              >
                <div
                  class="euiFormControlLayout__childrenWrapper"
                >
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-controls="random_html_id"
                    aria-expanded="true"
                    aria-haspopup="listbox"
                    aria-label="Filter options"
                    aria-owns="random_html_id"
                    autocomplete="off"
                    class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--compressed euiSelectableSearch"
                    placeholder="Filter options"
                    role="combobox"
                    type="search"
                    value=""
                  />
                  <div
                    class="euiFormControlLayoutIcons"
                  >
                    <span
                      class="euiFormControlLayoutCustomIcon"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="euiSelectableList"
              >
                <div
                  style="overflow: visible; width: 0px;"
                />
                <div
                  class="resize-triggers"
                >
                  <div
                    class="expand-trigger"
                  >
                    <div
                      style="width: 1px; height: 1px;"
                    />
                  </div>
                  <div
                    class="contract-trigger"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</body>
`;
